fix cancel request modal spacing with no icon

--- a/styles/components/MyAccount.module.scss
+++ b/styles/components/MyAccount.module.scss
@@ -49,8 +49,20 @@
   font-weight: var(--nypl-fontWeights-medium);
   letter-spacing: normal;
 }
-.string-only-heading {
-  padding-left: var(--nypl-space-l);
+
+.noIconHeading {
+  padding-left: var(--nypl-space-s);
+  padding-top: var(--nypl-space-s);
+}
+
+.noIconBody {
+  font-size: var(--nypl-fontSizes-desktop-body-body1);
+  display: flex;
+  flex-direction: column;
+  p {
+    margin-left: var(--nypl-space-s);
+    margin-right: var(--nypl-space-m);
+  }
 }
 
 .modalBody {
